<resources>
    <string name="app_name">ProtecTalk</string>
    <string name="restart_service">Restart service</string>
    <string name="welcome_title">Welcome to ProtecTalk</string>
    <string name="btn_sign_in">Sign in</string>
    <string name="create_account_title">Create your account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome_to_protectalk">Welcome to ProtecTalk</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="phone_number">Phone Number</string>
    <string name="e_mail">E-Mail</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
</resources>
